--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
       <script>
         function myFunction() {
           var choices = ["Bon Chon","KFC","McDonalds","Mazza","Dell's"];
-          function myFunction() {
-            document.getElementById("random").value = choices[Math.round(Math.random() * 4)];
-          }
+          document.getElementById("random").text = choices[Math.round(Math.random() * 4)];
         }
       </script>
 
