--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         function myFunction() {
           var choices = ["Bon Chon","KFC","McDonalds","Mazza","Dell's"];
           var rand = choices[Math.round(Math.random() * 4)];
-          document.getElementById("random").value = rand;
+          document.getElementById("random").innerHTML = rand;
           alert(rand);
         }
       </script>
