--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
       <p id="random">sample text</p>
 
-      <button type="button" onclick="myFunction()">Submit</button>
+      <button type="button" onclick="myFunction()">San tayo kain?</button>
       
       <script>
         function myFunction() {
           var choices = ["Bon Chon","KFC","McDonalds","Mazza","Dell's"];
           var rand = choices[Math.round(Math.random() * 4)];
           document.getElementById("random").innerHTML = rand;
-          alert(rand);
+//          alert(rand);
         }
       </script>
 
