--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-      <p id="random">sample text</p>
+      <h1 id="random">sample text</h1>
 
       <button type="button" onclick="myFunction()">San tayo kain?</button>
       
