--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             }
             counter++;
           } while(counter < 3)
-          
+          alert(chosen.length);          
           document.getElementById("choice1").innerHTML = chosen[0];
 //          alert(rand);
         }
