--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
           while(counter < 3) {
             alert(counter);
             rand = choices[Math.round(Math.random() * choices.length)];
-            if(JQuery.inArray(rand, chosen) < 0) {
+            alert(counter);
+            if($.inArray(rand, chosen) < 0) {
               chosen.push(rand);
             }
+            alert(counter);
             counter++;
           }
           document.getElementById("choice1").innerHTML = chosen[0];
