--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
             }
           }
           document.getElementById("choice1").innerHTML = chosen[0];
+          document.getElementById("choice2").innerHTML = chosen[0];
+          document.getElementById("choice3").innerHTML = chosen[0];
 //          alert(rand);
         }
       </script>
