--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           var counter = 0;
           
           while(counter < 3) {
-            rand = choices[Math.round(Math.random() * choices.length)];
+            rand = choices[Math.round(Math.random() * choices.length) - 1];
             if(chosen.indexOf(rand) < 0) {
               chosen.push(rand);
               counter++;
