--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <button type="button" onclick="myFunction()">San tayo kain?</button>
 
       <h1 id="random">sample text</h1>
-      <ul>
+      <ol>
         <li>
           <h3 id="choice1"></h3>
         </li>
@@ -43,7 +43,7 @@
         <li>
           <h3 id="choice3"></h3>
         </li>
-      </ul>
+      </ol>
       
       <script>
         function myFunction() {
@@ -53,7 +53,7 @@
           var counter = 0;
           
           while(counter < 3) {
-            rand = choices[Math.round(Math.random() * choices.length) - 1];
+            rand = choices[Math.round(Math.random() * (choices.length-1))];
             if(chosen.indexOf(rand) < 0) {
               chosen.push(rand);
               counter++;
