--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       <br>
       <ol>
         <li>
-          <h3 id="choice1"></h3>
+          <p id="choice1"></p>
         </li>
         <li>
-          <h3 id="choice2"></h3>
+          <p id="choice2"></p>
         </li>
         <li>
-          <h3 id="choice3"></h3>
+          <p id="choice3"></p>
         </li>
       </ol>
       
@@ -58,7 +58,6 @@
             "BCI",
             "Zarks",
             "Razon's",
-            "Mazza",
             "Army Navy",
             "Yellowcab",
             "2nd Floor"
@@ -75,6 +74,9 @@
               "Chicken & Beer",
               "Wursty Wursty",
               "S&R"
+            ];
+          var places = [
+              {"name":"","price":"high","day":""}
             ];
           var choices = [];
           var chosen = [];
