--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           var counter = 0;
           
           for (var a in places) {
-            alert(a['name']);
+            alert(a[0]);
           }
           
           if(document.getElementById("friday").checked) {
