--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
           var counter = 0;
           
           for (var a in places) {
-            alert(a[0]);
+            alert(a[1]);
+            alert(a[0]['name']);
           }
           
           if(document.getElementById("friday").checked) {
