--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
           var counter = 0;
           
           for (var a in places) {
-            alert(a[1]);
-            alert(a[0]['name']);
+            alert(places[a]['name']);
           }
           
           if(document.getElementById("friday").checked) {
