--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <button type="button" onclick="myFunction()">San tayo kain?</button>
       <br>
         <form>
-          <input type="radio" name="selection" id="Everyday" value="checked">Everyday
+          <input type="radio" name="selection" id="Everyday" checked=true>Everyday
           <input type="radio" name="selection" id="Friday">Friday
         </form>
         <form>
-          <input type="radio" name="price" id="High" value="checked">High
+          <input type="radio" name="price" id="High" checked=true>High
           <input type="radio" name="price" id="Low">Low
         </form>
       <br>
