--- a/index.html
+++ b/index.html
@@ -86,19 +86,43 @@
           var rand;
           var counter = 0;
 
-          alert("i got here");
-
           if(document.getElementById("Friday").checked) {
             for (var a in places) {
               if(places[a]['day'] = "friday") {
-                choices.push(places[a]['name']);
+                if(document.getElementById("High").checked) {
+                  for (var a in places) {
+                    if(places[a]['price'] = "high") {
+                      choices.push(places[a]['name']);
+                    }
+                  }
+                }
+                else {
+                  for (var a in places) {
+                    if(places[a]['price'] = "low") {
+                      choices.push(places[a]['name']);
+                    }
+                  }
+                }
               }
             }
           }
           else {
             for (var a in places) {
               if(places[a]['day'] = "Everyday") {
-                choices.push(places[a]['name']);
+                if(document.getElementById("High").checked) {
+                  for (var a in places) {
+                    if(places[a]['price'] = "high") {
+                      choices.push(places[a]['name']);
+                    }
+                  }
+                }
+                else {
+                  for (var a in places) {
+                    if(places[a]['price'] = "low") {
+                      choices.push(places[a]['name']);
+                    }
+                  }
+                }
               }
             }
           }
