--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
           var chosen = [];
           var rand;
           var counter = 0;
+          
+          alert($("[name]='selection' : checked"));
 
           if(document.getElementById("Friday").checked) {
             for (var a in places) {
