--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           var rand;
           var counter = 0;
           
-          alert($("[name]='selection' : checked"));
+          alert($("[name='selection'] : checked"));
 
           if(document.getElementById("Friday").checked) {
             for (var a in places) {
