--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           var rand;
           var counter = 0;
           
-          $selected = $("[name='selection'] : checked");
+          $selected = $("input[name='selection'] : checked");
           
           alert($selected.attr('checked'));
 
