--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           
           $selected = $("input[name=selection]:checked");
           
-          alert($selected.attr('checked'));
+          alert($selected.val());
 
           if(document.getElementById("Friday").checked) {
             for (var a in places) {
