--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <button type="button" onclick="myFunction()">San tayo kain?</button>
       <br>
         <form>
-          <input type="radio" name="selection" id="Everyday" checked>Everyday<br>
-          <input type="radio" name="selection" id="Friday">Friday
+          <input type="radio" name="selection" id="Everyday" value="everyday" checked>Everyday<br>
+          <input type="radio" name="selection" id="Friday" value="friday">Friday
         </form>
         <form>
-          <input type="radio" name="price" id="High" checked>High<br>
-          <input type="radio" name="price" id="Low">Low
+          <input type="radio" name="price" id="High" value="high" checked>High<br>
+          <input type="radio" name="price" id="Low" value="low">Low
         </form>
       <br>
       <ol>
