--- a/index.html
+++ b/index.html
@@ -59,28 +59,30 @@
       <script>
         function myFunction() {
           var places = [
-              {'name': "Trattoria", 'price': "high", 'day': "friday"},
-              {'name': "Kuse", 'price': "high", 'day': "friday"},
-              {'name': "Pho Hoa", 'price': "high", 'day': "friday"},
-              {'name': "Little Asia", 'price': "high", 'day': "friday"},
-              {'name': "Ukkokei", 'price': "high", 'day': "friday"},
-              {'name': "Banapple", 'price': "high", 'day': "friday"},
-              {'name': "Main Street", 'price': "high", 'day': "friday"},
-              {'name': "Lucky's", 'price': "high", 'day': "friday"},
-              {'name': "Chicken & Beer", 'price': "high", 'day': "friday"},
-              {'name': "Wursty Wursty", 'price': "high", 'day': "friday"},
-              {'name': "S&R", 'price': "high", 'day': "friday"},
-              {'name': "Bon Chon", 'price': "low", 'day': "everyday"},
-              {'name': "KFC", 'price': "low", 'day': "everyday"},
-              {'name': "McDonalds", 'price': "low", 'day': "everyday"},
-              {'name': "JT's", 'price': "low", 'day': "everyday"},
-              {'name': "Jollibee", 'price': "low", 'day': "everyday"},
-              {'name': "Bacolod Chicken Inasal", 'price': "low", 'day': "everyday"},
-              {'name': "Zarks", 'price': "low", 'day': "everyday"},
-              {'name': "Razon's", 'price': "low", 'day': "everyday"},
-              {'name': "Army Navy", 'price': "low", 'day': "everyday"},
-              {'name': "Yellowcab", 'price': "low", 'day': "everyday"},
-              {'name': "2nd Floor", 'price': "low", 'day': "everyday"}
+              {'name': "Trattoria",         'price': "high", 'day': "friday"},
+              {'name': "Kuse",              'price': "high", 'day': "friday"},
+              {'name': "Pho Hoa",           'price': "high", 'day': "friday"},
+              {'name': "Little Asia",       'price': "high", 'day': "friday"},
+              {'name': "Ukkokei",           'price': "high", 'day': "friday"},
+              {'name': "Banapple",          'price': "high", 'day': "friday"},
+              {'name': "Main Street",       'price': "high", 'day': "friday"},
+              {'name': "Lucky's",           'price': "high", 'day': "friday"},
+              {'name': "Chicken & Beer",    'price': "high", 'day': "friday"},
+              {'name': "Wursty Wursty",     'price': "high", 'day': "friday"},
+              {'name': "S&R",               'price': "high", 'day': "friday"},
+              {'name': "Bon Chon",          'price': "low",  'day': "everyday"},
+              {'name': "KFC",               'price': "low",  'day': "everyday"},
+              {'name': "McDonalds",         'price': "low",  'day': "everyday"},
+              {'name': "JT's",              'price': "low",  'day': "everyday"},
+              {'name': "Jollibee Delivery", 'price': "low",  'day': "everyday"},
+              {'name': "Bacolod Inasal",    'price': "low",  'day': "everyday"},
+              {'name': "Zarks",             'price': "low",  'day': "everyday"},
+              {'name': "Razon's",           'price': "low",  'day': "everyday"},
+              {'name': "Army Navy",         'price': "high", 'day': "everyday"},
+              {'name': "Yellowcab",         'price': "high", 'day': "everyday"},
+              {'name': "2nd Floor",         'price': "low",  'day': "everyday"},
+              {'name': "Amici",             'price': "high", 'day': "friday"}
+              {'name': "Tapa-King Delivery",'price': "low",  'day': "everyday"}
             ];
             
           var choices = [];
