--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               {'name': "Army Navy",         'price': "high", 'day': "everyday"},
               {'name': "Yellowcab",         'price': "high", 'day': "everyday"},
               {'name': "2nd Floor",         'price': "low",  'day': "everyday"},
-              {'name': "Amici",             'price': "high", 'day': "friday"}
+              {'name': "Amici",             'price': "high", 'day': "friday"},
               {'name': "Tapa-King Delivery",'price': "low",  'day': "everyday"}
             ];
             
