--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               {'name': "JT's",              'price': "low",  'day': "everyday"},
               {'name': "Jollibee Delivery", 'price': "low",  'day': "everyday"},
               {'name': "Bacolod Inasal",    'price': "low",  'day': "everyday"},
-              {'name': "Zarks",             'price': "low",  'day': "everyday"},
+              {'name': "Zark's",            'price': "low",  'day': "everyday"},
               {'name': "Razon's",           'price': "low",  'day': "everyday"},
               {'name': "Army Navy",         'price': "high", 'day': "everyday"},
               {'name': "Yellowcab",         'price': "high", 'day': "everyday"},
