--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               {'name': "S&R",               'price': "high", 'day': "friday"},
               {'name': "Bon Chon",          'price': "low",  'day': "everyday"},
               {'name': "KFC",               'price': "low",  'day': "everyday"},
-              {'name': "McDonalds",         'price': "low",  'day': "everyday"},
+              {'name': "McDonald's",         'price': "low",  'day': "everyday"},
               {'name': "JT's",              'price': "low",  'day': "everyday"},
               {'name': "Jollibee Delivery", 'price': "low",  'day': "everyday"},
               {'name': "Bacolod Inasal",    'price': "low",  'day': "everyday"},
