--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
               {'name': "Army Navy",         'price': "high"},
               {'name': "Yellowcab",         'price': "high"},
               {'name': "Amici",             'price': "high"},
+              {'name': "Sinangag Express",  'price': "low"},
               {'name': "Tapa-King Delivery",'price': "low"}
             ];
             
