--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               {'name': "Yellowcab",         'price': "high"},
               {'name': "Amici",             'price': "high"},
               {'name': "Sinangag Express",  'price': "low"},
-              {'name': "Tapa-King Delivery",'price': "low"}
+              {'name': "Malcolm's",          'price': "low"}
             ];
             
           var choices = [];
