--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
               {'name': "Yellowcab",         'price': "high"},
               {'name': "Amici",             'price': "high"},
               {'name': "Sinangag Express",  'price': "low"},
-              {'name': "Malcolm's",          'price': "low"}
+              {'name': "Dencio's",          'price': "low"},
+              {'name': "Malcolm's",         'price': "low"}
             ];
             
           var choices = [];
