--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
           <a id="forkme_banner" href="https://github.com/crunchyraff">View on GitHub</a>
 
           <h1 id="project_title">Crunchyraff.github.io</h1>
-          <h2 id="project_tagline">Main</h2>
-          <h3 id="project_tagline">This is a test</h3>
+          <h2 id="project_tagline">Saan tayo kakain?</h2>
 
         </header>
     </div>
@@ -74,7 +73,7 @@
               {'name': "Bacolod Inasal",    'price': "low"},
               {'name': "Zark's",            'price': "low"},
               {'name': "Razon's",           'price': "low"},
-              {'name': "Off the Grid",      'price': "high"},
+              {'name': "Brewhaus",          'price': "high"},
               {'name': "Army Navy",         'price': "high"},
               {'name': "Yellowcab",         'price': "high"},
               {'name': "Amici",             'price': "high"},
