--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/crunchyraff">View on GitHub</a>
 
-          <h1 id="project_title">Crunchyraff.github.io</h1>
-          <h2 id="project_tagline">90 Second Analog Clock</h2>
+          <h1 id="project_title">90 Second Analog Clock</h1>
+          <h2 id="project_tagline">by crunchyraff</h2>
 
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" background='#4a3652'>
+    <div id="main_content_wrap" class="outer" style="background:#4a3652">
       <section id="main_content" class="inner">
 
         <canvas id="canvas" width="600" height="600">
@@ -41,7 +41,8 @@
         var col2 = '#fdde71';     //clock face
         var col3 = '#b33';     //hand
         var col4 = '#a74134';  
-        var col5 = '#4a3652';        var secs = 0;
+        var col5 = '#4a3652';        
+        var secs = 0;
         ctx.translate(radius, radius);
         radius = radius * 0.90;
         setInterval(drawClock, 1000);
