--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" style="background:#4a3652">
+    <div id="main_content_wrap" class="outer" style="background:#191c26">
       <section id="main_content" class="inner">
 
         <canvas id="canvas" width="600" height="600">
@@ -37,11 +37,11 @@
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
         var radius = canvas.height / 2;
-        var col1 = '#714';     //border
-        var col2 = '#fdde71';     //clock face
-        var col3 = '#b33';     //hand
-        var col4 = '#a74134';  
-        var col5 = '#4a3652';        
+        var col1 = '#660033';     //border
+        var col2 = '#ffd97b';     //clock face
+        var col3 = '#a60027';     //hand
+        var col4 = '#191c26';  
+        var col5 = '#4a3652';
         var secs = 0;
         ctx.translate(radius, radius);
         radius = radius * 0.90;
