--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/crunchyraff">View on GitHub</a>
 
-          <h1 id="project_title">90 Second Analog Clock</h1>
+          <h1 id="project_title">90 Second Analog Timer</h1>
           <h2 id="project_tagline">by crunchyraff</h2>
 
         </header>
