--- a/90seconds/index.html
+++ b/90seconds/index.html
@@ -16,9 +16,8 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
+    <div id="header_wrap" class="outer" style="background:#575D72">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/crunchyraff">View on GitHub</a>
 
           <h1 id="project_title">90 Second Analog Timer</h1>
           <h2 id="project_tagline">by crunchyraff</h2>
@@ -140,7 +139,7 @@
     </div>
 
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
+    <div id="footer_wrap" class="outer" style="background:#575D72">
       <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
