--- a/90seconds/index.html
+++ b/90seconds/index.html
@@ -13,7 +13,7 @@
     <title>Crunchyraff.github.io</title>
   </head>
 
-  <body>
+  <body style="background:#575D72">
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer" style="background:#575D72">
