--- a/90seconds/index.html
+++ b/90seconds/index.html
@@ -16,11 +16,10 @@
   <body style="background:#575D72">
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer" style="background:#575D72">
-        <header class="inner">
+    <div id="header_wrap" class="outer" style="background:#575D72; padding-top: 10px; padding-bottom: 6px;">
+        <header class="inner" style="text-align:center">
 
-          <h1 id="project_title">90 Second Analog Timer</h1>
-          <h2 id="project_tagline">by crunchyraff</h2>
+          <p id="project_title">90 Seconds</p>
 
         </header>
     </div>
@@ -145,6 +144,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer" style="background:#575D72">
       <footer class="inner">
+        <p id="project_tagline">by crunchyraff</p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
