--- a/90seconds/index.html
+++ b/90seconds/index.html
@@ -16,8 +16,8 @@
   <body style="background:#575D72">
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer" style="background:#575D72; padding-top: 10px; padding-bottom: 6px;">
-        <header class="inner" style="text-align:center">
+    <div id="header_wrap" class="outer" style="background:#575D72;">
+        <header class="inner" style="text-align:center; padding-top: 10px; padding-bottom: 6px;">
 
           <p id="project_title">90 Seconds</p>
 
