--- a/90seconds/index.html
+++ b/90seconds/index.html
@@ -144,7 +144,9 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer" style="background:#575D72">
       <footer class="inner">
-        <p id="project_tagline">by crunchyraff</p>
+        <!-- Hello!
+            <p id="project_tagline">by crunchyraff</p>
+        -->
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
