--- a/90seconds/index.html
+++ b/90seconds/index.html
@@ -45,7 +45,7 @@
         ctx.translate(radius, radius);
         radius = radius * 0.90;
         setInterval(drawClock, 1000);
-        window.addEventListener("keypress", checkKeyPressed, false);
+        window.addEventListener("keydown", checkKeyPressed, false);
         window.addEventListener("click", checkKeyPressed, false);
         
         function drawClock() {
