--- a/90seconds/index.html
+++ b/90seconds/index.html
@@ -10,7 +10,7 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> -->
     <script src="javascripts/jquery-1.11.1.min.js"></script>
 
-    <title>Crunchyraff.github.io</title>
+    <title>90 Seconds</title>
   </head>
 
   <body style="background:#575D72">
