--- a/90seconds/index.html
+++ b/90seconds/index.html
@@ -5,11 +5,16 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Crunchyraff.github.io : Main">
+    <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> -->
     <script src="javascripts/jquery-1.11.1.min.js"></script>
-
+    <style>
+    img {
+        max-width: 100%;
+    }
+    </style>
     <title>90 Seconds</title>
   </head>
 
