--- a/ffexmats.html
+++ b/ffexmats.html
@@ -18,7 +18,7 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>    <script src="javascripts/jquery-1.11.1.min.js"></script>
 	
-	
+	<link rel="stylesheet" type="text/css" media="screen" href="matlist.css">
 
 	<script>
 		$( document ).ready( function(){
@@ -58,8 +58,7 @@
         });
 		
 		
-			  $.get('/res/matlist.html', function(data) {
-				   //process text file line by line
+			  $.get('/matlist.html', function(data) {
 				   $('.tableContent').html(data);
 				   alert(data);
 				});
@@ -72,16 +71,14 @@
 
   <body>
 
-		<div class="container"  style="min-width:500px;width:768px;">
+		<div class="container"  style="min-width:480px;width:768px;">
   
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/crunchyraff">View on GitHub</a>
-
-          <h1 id="project_title">FFEX Materials</h1>
-          <h2 id="project_tagline">by crunchyraff</h2>
-
+          <div class="page-header"><h1 id="project_title">FFEX Materials
+			<small>by crunchyraff</small></h1></div>
+			<div id="project_tagline"></div>
         </header>
     </div>
 
@@ -93,20 +90,22 @@
 	  
        <br/>
 		
-	<div class="panel panel-default">
+	<div class="panel panel-primary">
 	  <!-- Default panel contents -->
 		<div class="panel-heading">
-		<input id="searchInput" placeholder="Type To Filter">
+		<input id="searchInput" placeholder="Type To Filter" class="form-control">
 		</div>
 		<table class="table">
 			<thead>
 				<tr>
 					<th>Item Name</th>
-					<th>Source</th>
+					<th>Source 1</th>
+					<th>Source 2</th>
+					<th>Source 3</th>
+					<th>Rarity</th>
 				</tr>
 			</thead>
 			<tbody id="fbody" class="tableContent">
-				
 			</tbody>
 		</table>
 	</div>
