--- a/ffexmats.html
+++ b/ffexmats.html
@@ -18,7 +18,7 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>    <script src="javascripts/jquery-1.11.1.min.js"></script>
 	
-	<link rel="stylesheet" type="text/css" media="screen" href="matlist.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/matlist.css">
 
 	<script>
 		$( document ).ready( function(){
