--- a/ffexmats.html
+++ b/ffexmats.html
@@ -58,7 +58,7 @@
         });
 		
 		
-			  $.get('/matlist.html', function(data) {
+			  $.get('res/matlist.html', function(data) {
 				   $('.tableContent').html(data);
 				   alert(data);
 				});
