--- a/ffexmats.html
+++ b/ffexmats.html
@@ -70,7 +70,7 @@
 
   <body>
 
-		<div class="container"  style="min-width:480px;width:768px;">
+		<div class="container-fluid"  style="min-width:480px;width:768px;">
   
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
