--- a/ffexmats.html
+++ b/ffexmats.html
@@ -89,12 +89,12 @@
 	  
        <br/>
 		
-	<div class="panel panel-primary">
+	<div class="panel panel-primary table-responsive">
 	  <!-- Default panel contents -->
 		<div class="panel-heading">
 		<input id="searchInput" placeholder="Type To Filter" class="form-control">
 		</div>
-		<table class="table">
+		<table class="table table-striped table-bordered">
 			<thead>
 				<tr>
 					<th>Item Name</th>
