--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/crunchyraff">View on GitHub</a>
 
-          <h1 id="project_title">awkward</h1>
+          <h1 id="project_title" style="transform: rotate(-9deg);">oh man</h1>
 
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" style="background:#191c26">
+    <div id="main_content_wrap" class="outer" style="background-color:#eee; width:768px; float: none; margin: 0 auto;>
       <section id="main_content" class="inner">
 
-        <h1>You shouldn't be here!</h1>
-
-
+        <h1 style="transform: rotate(13deg); text-align:right; ">i am not good with computer</h1>
+		
+		<h1 style="transform: rotate(-40deg); color:#eee;">please to help</h1>
+		
       </section>
     </div>
 
