--- a/ffexmats.html
+++ b/ffexmats.html
@@ -88,7 +88,7 @@
 	
 		<div class="grid">
 		<div class="row">
-			<div  class="container-fluid panel panel-default panel-heading col-xs-12" data-spy="affix" data-offset-top="150" style="max-width: 768px;">
+			<div  id="searchBar" class="container-fluid panel panel-default panel-heading col-xs-12" data-spy="affix" data-offset-top="150" style="max-width: 768px;">
 			<div class="container-fluid col-xs-12">
 				<input id="searchInput" placeholder="Type To Filter" class="form-control">
 			</div>
