--- a/mhcalc.html
+++ b/mhcalc.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <title>Document</title>
+    <title>MH Damage Calc</title>
 </head>
 <body>
     
