Changed 'Damage' to 'Attack Power'

--- a/mhcalc.html
+++ b/mhcalc.html
@@ -71,7 +71,7 @@
 
             <div class="box box-d">
                 <i class="material-icons md-48">videogame_asset</i>
-                <h2>Damage:</h2>
+                <h2>Attack Power:</h2>
                 <h1 id='dmg'>0</h1>
             </div>
 
