--- a/heythere.html
+++ b/heythere.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/heythere.css">
     <title>Test Left Design</title>
 </head>
 <body id='body' onload="init()">
