Added icons to card

--- a/heythere.html
+++ b/heythere.html
@@ -8,9 +8,9 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
-    
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel="stylesheet" href="css/heythere.css">
-    <title>Test Left Design</title>
+    <title>Coffee</title>
 </head>
 <body id='body' onload="init()">
     <div class="container main-header">
@@ -25,10 +25,10 @@
         <!-- <div class='info-text info-2'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus voluptate sint praesentium vitae architecto deserunt.</div>         -->
         <div class="info-text info-2">
             <ul class='info-list'>
-                <li>Haha</li>
-                <li>You found me</li>
-                <li>Need coffee</li>
-                <li>We're all having fun here</li>
+                <li><i class="fa fa-fw fa-envelope"></i> Contact me</li>
+                <li><i class="fa fa-fw fa-twitter"></i> Twitter</li>
+                <li><i class="fa fa-fw fa-coffee"></i> Need coffee</li>
+                <li><i class="fa fa-fw fa-comments"></i> We're all having fun here</li>
             </ul>
         </div>
     </div>
