--- a/heythere.html
+++ b/heythere.html
@@ -14,21 +14,22 @@
 </head>
 <body id='body' onload="init()">
     <div class="container main-header">
-        <div id='main-text' class="main-text typewriter hide-text">You're doing fine</div>
+        <div id='main-text' class="main-text typewriter hide-text">Hello</div>
         <div id="date"></div>
         <div id="clock"></div>
     </div>
 
-    <div id="info-main" class="info-card" onclick="toggle()">
-        <div class="info-top"></div>
-        <div class='info-text info-1'>A site by me</div>
+    <div id="info-main" class="info-card">
+        <div class="info-top pointer" onclick="toggle()"><i id="about-open" class="fa fa-question"></i></div>
+        <div class='info-text info-1'>Contact me</div>
         <!-- <div class='info-text info-2'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus voluptate sint praesentium vitae architecto deserunt.</div>         -->
         <div class="info-text info-2">
             <ul class='info-list'>
-                <li><i class="fa fa-fw fa-envelope"></i> Contact me</li>
-                <li><i class="fa fa-fw fa-twitter"></i> Twitter</li>
-                <li><i class="fa fa-fw fa-coffee"></i> Need coffee</li>
-                <li><i class="fa fa-fw fa-comments"></i> We're all having fun here</li>
+                <li><i class="fa fa-fw fa-envelope"></i> rafael.orvin@gmail.com</li>
+                <li><a href="https://twitter.com/raffchua"><i class="fab fa-twitter fa-fw"></i> Twitter</a></li>
+                <li><a href="https://facebook.com/raffchua"><i class="fab fa-facebook fa-fw"></i> Facebook</a></li>
+                <li><i class="fa fa-fw fa-coffee"></i> Coffee?</li>
+                <li><i class="fa fa-fw fa-comments"></i> Let's talk</li>
             </ul>
         </div>
     </div>
