--- a/heythere.html
+++ b/heythere.html
@@ -28,8 +28,8 @@
                 <li><i class="fa fa-fw fa-envelope"></i> rafael.orvin@gmail.com</li>
                 <li><a href="https://twitter.com/raffchua"><i class="fab fa-twitter fa-fw"></i> Twitter</a></li>
                 <li><a href="https://facebook.com/raffchua"><i class="fab fa-facebook fa-fw"></i> Facebook</a></li>
-                <li><i class="fa fa-fw fa-coffee"></i> Coffee?</li>
-                <li><i class="fa fa-fw fa-comments"></i> Let's talk</li>
+                <li><i class="fa fa-fw fa-coffee"></i> Coffee</li>
+                <!-- <li><i class="fa fa-fw fa-comments"></i> Let's talk</li> -->
             </ul>
         </div>
     </div>
